force-app/main/default/objects/refedge__Invitation_ReferenceContent__c/fields/refedge__First_Visit__c.field-meta.xml
<CustomField>
    <fullName>refedge__First_Visit__c</fullName>
    <label>First Visit</label>
    <type>DateTime</type>
</CustomField>