force-app/main/default/objects/refedge__Invitation_ReferenceContent__c/fields/refedge__Invitation__c.field-meta.xml
<CustomField>
    <fullName>refedge__Invitation__c</fullName>
    <label>Invitation</label>
    <referenceTo>refedge__Invitation__c</referenceTo>
    <relationshipName>Invitation_ReferenceContents</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>