force-app/main/default/objects/refedge__Invitation_ReferenceContent__c/fields/refedge__Reference_Content__c.field-meta.xml
<CustomField>
    <fullName>refedge__Reference_Content__c</fullName>
    <label>Reference Content</label>
    <referenceTo>refedge__Reference_Content__c</referenceTo>
    <relationshipName>Invitation_ReferenceContents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>